# pipelinekit

./: .gitignore  ADR-025.md  CHANGELOG.md  LICENSE  README.md  SPEC-024-QM6.md  pyproject.toml
.claude/: CLAUDE.md
.claude/commands/: README.md
.claude/memory/: README.md
.claude/skills/: README.md
.claude/templates/: README.md
.cursor/checklists/: README.md
.cursor/context/: README.md
.cursor/rules/: README.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md
.github/scripts/: build_diagram_index.py
.github/workflows/: README.md  ci.yml  render-diagrams.yml
.mcp/: README.md
.mcp/configs/: README.md
.mcp/logs/: README.md
.mcp/registry/: README.md  servers.md
.mcp/servers/: README.md
.mcp/templates/: README.md
.wrangler/cache/: pages.json  wrangler-account.json
agents/blueprint-engineer/: AGENT.md  README.md  SYSTEM.md
agents/cli-engineer/: AGENT.md  README.md  SYSTEM.md
agents/diagnostics-engineer/: AGENT.md  README.md  SYSTEM.md
agents/documentation-engineer/: AGENT.md  README.md  SYSTEM.md
agents/quality-engineer/: AGENT.md  README.md  SYSTEM.md
agents/release-engineer/: AGENT.md  README.md  SYSTEM.md
agents/runtime-engineer/: AGENT.md  README.md  SYSTEM.md
blueprints/postgres-to-snowflake/: blueprint.json  pipelinekit.example.yaml
blueprints/salesforce-to-snowflake/: blueprint.json  pipelinekit.example.yaml
blueprints/stripe-to-snowflake/: RUNBOOK.md  blueprint.json  example.yaml  pipelinekit.example.yaml
contracts/: README.md  adapter.yaml  notification.yaml  pipeline.yaml  provider.yaml
docs/: EMS-DOCUMENTATION-PLAN.md  EMS-ROADMAP-STATUS.md  PipelineKit — Comprehensive Modern Data Engineering Project Review.md
docs/ai/: PIPELINEKIT-AI & Model Strategy Standard.md
docs/beta/: PIPELINEKIT-Design Partner & Beta Program Handbook.md
docs/blueprints/: PIPELINEKIT-Blueprint Catalog v1.md
docs/constitution/: Product-Constitution.md
docs/decisions/: ADR-000-Foundational-Architecture-Decisions.md  ADR-013-Resend-MCP.md  ADR-014-AI-Provider-MCP-Layer.md  ADR-015-Architecture-Intelligence.md  ADR-016-Provider-Diversity.md  ADR-017-dlt-Credential-Integration-Policy.md  ADR-017-dlt-Credential-Integration.md  ADR-018-Blueprint-Generation-Governance.md  ADR-018-Blueprint-Proposal-Governance.md  ADR-019-Remote-Blueprint-Registry.md  ADR-020-Migration-Intelligence.md
docs/diagrams/: 01-system-overview.mmd  02-five-layer-architecture.mmd  03-cli-command-map.md  03-cli-command-map.mmd  04-pipeline-execution-flow.mmd  05-blueprint-proposal-flow.mmd  06-migration-intelligence-flow.mmd  07-state-store-schema.mmd  08-error-taxonomy.md  08-error-taxonomy.mmd  09-blueprint-catalog-registry.mmd  09-blueprint-catalog.md  10-ai-provider-architecture.mmd  11-product-ecosystem.mmd  12-future-mcp-architecture.mmd  README.md  index.html
prompts/: README.md
registry/: README.md  index.html
runtime/: README.md
schemas/: README.md  architecture.schema.json  blueprint.schema.json  blueprint_proposal.schema.json  diagnostic.schema.json
scripts/: verify-blueprint-001.ps1  verify-blueprint-002.ps1  verify-blueprint-003.ps1
skills/: README.md
website/: README.md  _redirects  index.html
(+351 files in other folders)
