[tool.poetry]
name = "pipelinekit"
version = "0.1.0"
description = "Trusted Analytics Infrastructure."
authors = ["Mpingo Systems LLC"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "pipelinekit", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = ">=0.16,<1.0"}
pydantic = "^2.0"
pyyaml = "^6.0"
rich = "^13.0"
dlt = {extras = ["snowflake", "bigquery", "duckdb", "sql_database"], version = "^1.0"}
dbt-core = "^1.8"
dbt-snowflake = "^1.8"
dbt-bigquery = "^1.8"
soda-core = "^3.0"
soda-core-postgres = "^3.0"
resend = "^2.0"
jsonschema = "^4.0"
openai = "^1.0"
anthropic = "^0.25"
ollama = "^0.2"
mistralai = "^1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
black = "^24.0"
ruff = "^0.4"
mypy = "^1.10"
pip-audit = "^2.0"

[tool.poetry.scripts]
pipelinekit = "pipelinekit.cli.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

# Provider libraries are wrapped behind adapters and are intentionally not
# type-checked. Their typed stubs (e.g. numpy's PEP 695 `type` statement) target
# Python 3.12+, which mypy cannot parse under python_version 3.11; skip following
# them rather than crash. The adapters reference these libs only via lazy,
# type-ignored imports.
[[tool.mypy.overrides]]
module = ["dlt.*", "soda.*", "openai.*", "anthropic.*", "ollama.*", "mistralai.*"]
follow_imports = "skip"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["src/pipelinekit"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
